# furious_work_test

./: .gitignore  README.md
api/: pyproject.toml
api/api/: config.py  settings.py  urls.py
api/clothes/: admin.py  routes.py
api/clothes/migrations/: 0001_initial.py
api/clothes/models/: clothes.py  users.py
api/clothes/serializers/: clothes.py  users.py
api/clothes/views/: clothes.py  users.py
bot/: pyproject.toml
bot/src/: bot.py  config.py  create_bot.py  descriptions.py  keyboards.py  service.py
bot/src/routes/: admin.py  buy_items.py  cart.py  catalog.py  faq.py  main.py
